<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            tools:context=".MainActivity"
            android:orientation="vertical"
            >
            <EditText
                android:id="@+id/Edit_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/Name"
                android:inputType="textCapWords"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/Toppings"/>
            <CheckBox
                android:id="@+id/whipped_cream_ckeckBox"
                style="@style/TextviewStyle"
                android:text="@string/whipped_cream"
                android:paddingLeft="24dp" />

            <CheckBox
                android:id="@+id/choclate_ckeckBox"
                style="@style/TextviewStyle"
                android:text="@string/chocolate"
                android:paddingLeft="24dp"
                android:paddingStart="24dp" />

            <TextView
                android:id="@+id/textView_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                android:textSize="30sp"
                android:layout_marginBottom="16sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        tools:context=".MainActivity"
        android:orientation="horizontal"
        >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textSize="20sp"
                android:layout_marginTop="16sp"
                android:shadowColor="#000000"
                android:onClick="increaseQuantityNumber"/>


            <TextView
                android:id="@+id/textView_quantityNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_of_quantity"
                android:layout_margin="16sp"
                android:textSize="20sp"


                />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="decreaseQuantityNumber"
            android:text="@string/decrease"
            android:textSize="20sp"
            android:layout_marginTop="16sp"
            />
    </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Order_Summery"
                android:layout_margin="16sp"
                android:textSize="20sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:layout_margin="16sp"
                android:textSize="20sp"
                android:id="@+id/order_summary_text_view"
                />



            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="OrderSummary"
                android:text="@string/Order"
                android:textSize="20sp" />


        </LinearLayout>
</ScrollView>